gateway-api/routes/custom-alertmanager-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-alertmanger-gateway-route
  namespace: prometheus
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: http
    namespace: envoy-gateway
  hostnames:
  - "alertmanager.cloudnull.dev"
  rules:
    - backendRefs:
      - name: kube-prometheus-stack-alertmanager
        port: 9093
