gateway-api/routes/custom-barbican-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-barbican-gateway-route
  namespace: openstack
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: barbican-https
    namespace: envoy-gateway
  hostnames:
  - "barbican.cloudnull.dev"
  rules:
    - backendRefs:
      - name: barbican-api
        port: 9311
