gateway-api/routes/custom-glance-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-glance-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: glance
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: glance-https
    namespace: envoy-gateway
  hostnames:
  - "glance.cloudnull.dev"
  rules:
    - backendRefs:
      - name: glance-api
        port: 9292
