gateway-api/routes/custom-heat-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-cloudformation-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: cloudformation
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: heat-https
    namespace: envoy-gateway
  hostnames:
  - "cloudformation.cloudnull.dev"
  rules:
    - backendRefs:
      - name: heat-cfn
        port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-heat-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: heat
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: heat-https
    namespace: envoy-gateway
  hostnames:
  - "heat.cloudnull.dev"
  rules:
    - backendRefs:
      - name: heat-api
        port: 8004
