gateway-api/routes/custom-keystone-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-keystone-gateway-route
  namespace: openstack
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: keystone-https
    namespace: nginx-gateway
  hostnames:
  - "keystone.api.cloudnull.dev"
  rules:
    - backendRefs:
      - name: keystone-api
        port: 5000
