gateway-api/routes/custom-loki-internal-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-loki-gateway-route
  namespace: grafana
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: loki-http
    namespace: nginx-gateway
  hostnames:
  - "internal.loki-gateway.api.cloudnull.dev"
  rules:
    - backendRefs:
      - name: loki-gateway
        port: 80
