gateway-api/routes/custom-magnum-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-magnum-gateway-route
  namespace: openstack
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: magnum-https
    namespace: envoy-gateway
  hostnames:
  - "magnum.cloudnull.dev"
  rules:
    - backendRefs:
      - name: magnum-api
        port: 9511
