gateway-api/routes/custom-neutron-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-neutron-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: neutron
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: neutron-https
    namespace: nginx-gateway
  hostnames:
  - "neutron.api.cloudnull.dev"
  rules:
    - backendRefs:
      - name: neutron-server
        port: 9696
