gateway-api/routes/custom-novnc-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-novnc-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: novnc
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: novnc-https
    namespace: nginx-gateway
  hostnames:
  - "novnc.api.cloudnull.dev"
  rules:
    - backendRefs:
      - name: nova-novncproxy
        port: 6080
