gateway-api/routes/custom-placement-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-placement-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: placement
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: placement-https
    namespace: envoy-gateway
  hostnames:
  - "placement.cloudnull.dev"
  rules:
    - backendRefs:
      - name: placement-api
        port: 8778
