gateway-api/routes/custom-prometheus-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-prometheus-gateway-route
  namespace: prometheus
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: http
    namespace: envoy-gateway
  hostnames:
  - "prometheus.cloudnull.dev"
  rules:
    - backendRefs:
      - name: kube-prometheus-stack-prometheus
        port: 9090
