gateway-api/routes/custom-teleport-cluster.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-teleport-cluster-http-gateway-route
  namespace: teleport-cluster
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: teleport-cluster-http
    namespace: nginx-gateway
  hostnames:
  - "teleport.cloudnull.dev"
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: custom-teleport-cluster-gateway-route
  namespace: teleport-cluster
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: teleport-cluster-https
    namespace: nginx-gateway
  hostnames:
  - "teleport.cloudnull.dev"
  rules:
    - backendRefs:
      - name: teleport-cluster
        port: 443
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: custom-teleport-cluster-gateway-wild-route
  namespace: teleport-cluster
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: teleport-cluster-wild-https
    namespace: nginx-gateway
  hostnames:
  - "*.teleport.cloudnull.dev"
  rules:
    - backendRefs:
      - name: teleport-cluster
        port: 443
